# genuff

./: CMakeLists.txt
src/: UrbanData.h  UrbanDatabase.cpp  UrbanDatabase.h  UrbanFraction.h  UrbanFractionField.cpp  UrbanFractionField.h  commons.h  main.cpp  write_geogrid.c
tools/: plot.ncl
